<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mini Curso Android</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_activity__tela_principal">Activity_TelaPrincipal</string>
    <string name="btSalvar">Salvar</string>
    <string name="btSair">Sair</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="Apagar">Apagar</string>
    <string name="descricao_tipo">Descrição</string>
    <string name="btCancelar">Cancelar</string>
    <string name="textView_nome">Nome</string>
    <string name="textView_cpf">CPF</string>
    <string name="textView_telefone">Telefone</string>
    <string name="textView_pessoa">Pessoa</string>
    <string name="title_activity_activity__motorista">Activity_Pessoa</string>
    <string name="menuitem_cad_pessoa">Pessoas</string>
    <string name="menuitem_relatorios">Relatórios</string>
    <string name="cadastro_pessoa">Cadastro Pessoas</string>
    <string name="dialog_title">Atenção</string>
    <string name="dialog_positve">Sim</string>
    <string name="dialog_negative">Não</string>
    <string name="cancel">Operação Cancelada</string>
    <string name="title_activity_activity__lista_pessoa">Lista de Pessoas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_produto">ActivityProduto</string>
    
</resources>