<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_pessoa"
            android:textSize="25dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_nome"
            />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_cpf"
             />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_telefone"
            />

        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
             

        <Button
            android:id="@+id/btnSalvarPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:onClick="btSalvar"
            android:text="@string/btSalvar" />

        <Button
            android:id="@+id/btnCancelarPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/btCancelar"
            android:onClick="btCancelar" />

        <Button
            android:id="@+id/btnSairPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/btSair" />
    </LinearLayout>

</ScrollView>